<resources>
    <string name="app_name">Drink Up</string>
    <string name="title_activity_down">Crazy Eights</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_trivia">Trivia Heat</string>
    <string name="title_activity_mostlikely">Most Likely</string>
    <string name="you_may_swear">, you may now swear again.</string>
    <string name="game_over">Thanks for playing!</string>
    <string name="stringPoint">Point!</string>
    <string name="stringDrink">Drink up!</string>
    <string name="please_select_a_game_below">Please Select a Game Below:</string>
    <string name="down">Down</string>
    <string name="trivia_heat">Trivia Heat</string>
    <string name="most_likely">Most Likely</string>
    <string name="hollywood">Hollywood</string>
    <string name="title_activity_test">TestActivity</string>
</resources>
