<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cameronhammel.cam.drinkup.GameSelect">

    <TextView
        android:id="@+id/selectgame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="32dp"
        android:text="@string/please_select_a_game_below"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selectgame"
        android:layout_marginTop="32dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/button1"
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/down"
            tools:targetApi="m" />

        <Button
            android:id="@+id/button2"
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/trivia_heat"
            tools:targetApi="m" />

        <Button
            android:id="@+id/button3"
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTintMode="src_over"
            android:text="@string/most_likely"
            tools:targetApi="m" />

        <Button
            android:id="@+id/button4"
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/hollywood"
            android:backgroundTint="#999999"
            android:backgroundTintMode="src_over"
            tools:targetApi="m" />
    </LinearLayout>
</RelativeLayout>
